# gitlab-bot

./: Cargo.toml  README.md
.github/workflows/: bloat.yml  release.yml
src/: main.rs
