[package]
name = "gitlab-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "=0.1405.1"
serde = {version="1", features=["derive"]}
serde_yaml = "0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }